Seo image optimization.

--- a/styles/base/_colors.scss
+++ b/styles/base/_colors.scss
@@ -9,9 +9,16 @@ $lightBlack: #292929;
 $lightGreyTwo: #fafafa;
 
 // Main Colours
-$primary: #3434e1;
-$accent: #0000cc;
-$tertiary: #ff4117;
+$primary-default: #3434e1;
+$primary-two: #2121cb;
+$primary-three: #1010c5;
+$accent-default: #2d2dbd;
+$accent-two: #22228e;
+$accent-three: #16165b;
+$tertiary-default: #ff4117;
+$tertiary-two: #ff5512;
+$tertiary-dark: #dd3a19;
+$tertiary-darker: #bc351a;
 $primary-dark: #00009b;
 $primary-light: #3d77f3;
 $primary-darker: #000057;
