Contact form styling and structure chanages

--- a/styles/components/ContactForm.module.scss
+++ b/styles/components/ContactForm.module.scss
@@ -3,7 +3,7 @@
 @import "../base/colors";
 
 .submitButton {
-	@apply w-fit flex items-center justify-center py-3 px-6 bg-primary-default hover:bg-accent-two transition-all duration-200 ease-in-out;
+	@apply w-fit flex items-center justify-center py-3 px-6 bg-accent-three hover:bg-accent-two transition-all duration-200 ease-in-out;
 }
 
 .messageSent {
