Added the gallery Slider compponent and updated general styling

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,6 +7,7 @@
 
 @import "./components/CTA.module.scss";
 @import "./components/Hero.module.scss";
+@import "./components/GallerySlider.module.scss";
 @import "./components/RequestAppointmentForm.module.scss";
 
 html,
