Created a new component and late night work.

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,7 @@
 @import "./components/CTA.module.scss";
 @import "./components/Hero.module.scss";
 @import "./components/GallerySlider.module.scss";
+@import "./components/Accreditations.module.scss";
 @import "./components/RequestAppointmentForm.module.scss";
 
 html,
